--- a/src/common/buttons.scss
+++ b/src/common/buttons.scss
@@ -56,6 +56,20 @@ Only add icons to buttons through CSS. All buttons must have text that is
 accessiable by a screen reader, see button grammar guidelines for rules about
 how button text should be phrased. See `button.close` for an example.
 
+### Toggle Button
+Toggle can be used to give user an option of seeing certain elements in different ways.
+<div class="button-toggle">
+    <label class="selected">
+        <input type="radio">Active way
+    </label>
+    <label>
+        <input type="radio">Non-active way
+    </label>
+    <label>
+        <input type="radio">Ather way
+    </label>
+</div>
+
 Styleguide 1.3
 */
 
@@ -112,6 +126,35 @@ button.close {
 
     > .button-group {
         margin: 0px;
+    }
+}
+
+.button-toggle {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+    > label {
+        @include button($button-color-default);
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        > input {
+            display: none;
+        };
+
+        &.selected {
+            @include button($button-color-primary);
+        }
+
+        &:not(:first-child) {
+          @include border-left-radius(0);
+        }
+        &:not(:last-child) {
+          @include border-right-radius(0);
+        }
     }
 }
 
