OLMIS-4027: added streaching table to minimum size of pagination element

--- a/src/openlmis-table/openlmis-table-container.scss
+++ b/src/openlmis-table/openlmis-table-container.scss
@@ -165,6 +165,7 @@ Styleguide 4.1
         position: relative; // tell JS to calculate offset from here
         > table {
             @extend .openlmis-table;
+            width: 100%;
         }
     }
 
