--- a/src/openlmis-sort/openlmis-sort.scss
+++ b/src/openlmis-sort/openlmis-sort.scss
@@ -36,4 +36,14 @@ Styleguide 2.4
 
 .openlmis-sort {
     @extend .dropdown-button;
+
+    > * {
+        display: block;
+        float: left;
+        margin-right: 1em;
+    }
+
+    > p {
+        margin-top: 0.6em;
+    }
 }
