OLMIS-4143: Updated scss to use align-items istead of margin

--- a/src/openlmis-form/form.scss
+++ b/src/openlmis-form/form.scss
@@ -106,6 +106,7 @@ form {
     }
 
     > label,
+    > div > label,
     > fieldset > legend {
         margin-top: 0.5em;
         margin-bottom: 0.2em;
