OLMIS-4143: Added margin-right for the label

--- a/src/openlmis-form/form.scss
+++ b/src/openlmis-form/form.scss
@@ -118,6 +118,10 @@ form {
         }
     }
 
+    > div > label {
+        margin-right: 0.25em;
+    }
+
     > input[type="button"],
     > input[type="submit"],
     > button {
