OLMIS-3779: Added badge and filter icon. Also added first version of counting filters.

--- a/src/common/buttons.scss
+++ b/src/common/buttons.scss
@@ -94,6 +94,15 @@ button {
         @include button($button-color-default);
         @include button-icon('plus');
     }
+
+    &.filters {
+        @include button($button-color-default);
+        @include button-icon('filter');
+
+        > span {
+            margin-left: 0.5em;
+        }
+    }
 }
 
 button.close {
