OLMIS-4838: Added option to display informational alert to the alertService

--- a/src/openlmis-modal/alert.scss
+++ b/src/openlmis-modal/alert.scss
@@ -38,3 +38,10 @@
 		color: $brand-success;
 	}
 }
+
+.alert-modal.is-info .alert-main {
+	@include icon('info-circle');
+	&:before {
+		color: $brand-primary;
+	}
+}
