OLMIS-5488: Added styles for select2 in popover and sidebar

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -94,5 +94,9 @@ body {
         width: $sidebar-width;
         float: left;
         margin-right: 1em;
+
+        .select2 {
+            width: ($sidebar-width - 16px);
+        }
     }
 }
