OLMIS-5488: Added important flag

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -96,7 +96,7 @@ body {
         margin-right: 1em;
 
         .select2 {
-            width: ($sidebar-width - 16px);
+            width: ($sidebar-width - 16px) !important;
         }
     }
 }
