--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -60,5 +60,5 @@ $padding2px:2px;
 $space-size: 16px !default;
 $opacity: 0.6 !default;
 
-$sidebar-width: 220px !default;
-$popover-width: 276px;
+$sidebar-width: 15.715em !default;
+$popover-width: 19.715em;
