OLMIS-3987 added word break css property to modal headers

--- a/src/openlmis-modal/modal.scss
+++ b/src/openlmis-modal/modal.scss
@@ -16,7 +16,8 @@
 		}
 	}
 
-	.modal-body > p {
+	.modal-body > p,
+	.modal-header > h1 {
 		overflow-wrap: break-word;
 		word-break: break-all;
 	}
