--- a/src/openlmis-message/message.scss
+++ b/src/openlmis-message/message.scss
@@ -1,10 +1,11 @@
 .message {
   @extend .clearfix;
-  margin-top: 1em;
-  padding-bottom: 1em;
+  margin-top: 14px;
+  padding-bottom: 14px;
+  font-size: 14px;
 
   > header {
-    margin-bottom: 1em;
+    margin-bottom: 14px;
 
     >.title {
       font-weight: bold;
