OLMIS-6361 fixed issue with long title in system notification

--- a/src/openlmis-message/message.scss
+++ b/src/openlmis-message/message.scss
@@ -9,6 +9,13 @@
 
     >.title {
       font-weight: bold;
+      display: block;
+      max-width: 65%;
+
+      > p {
+        overflow-wrap: break-word;
+        word-break: break-all;
+      }
     }
 
     > .date {
