--- a/src/openlmis-message/message.scss
+++ b/src/openlmis-message/message.scss
@@ -6,10 +6,16 @@
 
   > header {
     margin-bottom: 14px;
+    display: flex;
+    flex-wrap: nowrap;
+
+    > * {
+      flex: 0 0 auto;
+      align-items: flex-end;
+    }
 
     >.title {
       font-weight: bold;
-      display: block;
       max-width: 65%;
 
       > p {
