--- a/src/openlmis-table/openlmis-table-pane.scss
+++ b/src/openlmis-table/openlmis-table-pane.scss
@@ -83,8 +83,8 @@ Styleguide 4.6
         flex-grow: 1;
     }
 
-    .ps>.ps__scrollbar-x-rail,
-    .ps>.ps__scrollbar-y-rail {
+    .ps>.ps-scrollbar-x-rail,
+    .ps>.ps-scrollbar-y-rail {
         z-index: 20;
     }
 
