--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -5,6 +5,7 @@ $orange: #e67325 !default;
 $yellow: #e6ba13 !default;
 $blue: #3A95BC !default;
 $brand-blue: #49baeb !default;
+$purple: #8366a5 !default;
 
 $white: #ffffff !default;
 $light-gray: #e4e4e4 !default;
@@ -30,6 +31,9 @@ $background-color-danger: #f1eaeb !default;
 
 $brand-success: $green !default;
 $background-color-success: #caebec !default;
+
+$brand-offline: $purple !default;
+$background-color-offline: #e1d9e9 !default;
 
 $background-color: $white !default;
 $background-color-alt: #f0f0f0 !default;
