OLMIS-7173: Added an offline alert to the style guide

--- a/src/common/alerts.scss
+++ b/src/common/alerts.scss
@@ -8,6 +8,7 @@ markup:
 <div class="alert">This is the default alert message.</div>
 <div class="alert is-error">This is an error alert message.</div>
 <div class="alert is-success">This is an alert message about a successful event.</div>
+<div class="alert is-offline">This is an offline alert message.</div>
 
 Styleguide 1.6
 */
