[OLMIS-7319] Added breakpoints variables based on bootstrap.

--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -70,5 +70,12 @@ $padding2px:2px;
 $space-size: 16px !default;
 $opacity: 0.6 !default;
 
+$res-xs: 320px;
+$res-sm: 576px;
+$res-md: 768px;
+$res-lg: 992px;
+$res-xl: 1200px;
+$res-xxl: 1400px;
+
 $sidebar-width: 16em !default;
 $popover-width: 20em;
